<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_jungle_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:gravity="left|center"
            android:text="@string/last_screen"
            android:textColor="@color/platinum"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backdrop_path_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="260dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:src="@drawable/ic_launcher_background" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="260dp"
            android:id="@+id/poster_path_last"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/overview_last"
            android:scaleType="fitXY"
            tools:src="@drawable/ic_launcher_background"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:minLines="3"
            android:textStyle="bold"
            android:id="@+id/movie_name_last"
            app:layout_constraintStart_toEndOf="@id/poster_path_last"
            app:layout_constraintTop_toTopOf="@id/poster_path_last"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="movie Name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/overview"
            android:id="@+id/overview_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="12dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/backdrop_path_last"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="overview Details"
            android:minLines="5"
            android:id="@+id/overview_detail_last"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/tagLine"
            android:id="@+id/tagLine_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/overview_detail_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="tagLine Details"
            android:text="@string/na_string"
            android:id="@+id/tagLineDetails_last"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/tagLine_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/status"
            android:id="@+id/status_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/tagLineDetails_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="status"
            android:id="@+id/statusDetails_last"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/status_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/releaseDate"
            android:id="@+id/releaseDate_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/statusDetails_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="release date"
            android:id="@+id/releaseDateDetails_last"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/releaseDate_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/voteAverage"
            android:id="@+id/vote_average_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/releaseDateDetails_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="7.1"
            android:id="@+id/vote_average_detail_last"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/vote_average_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/budget"
            android:id="@+id/budget"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/vote_average_detail_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="2,4564565"
            android:id="@+id/budgetValue_last"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/budget"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/language"
            android:id="@+id/language_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/budgetValue_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="EN"
            android:id="@+id/languageValue_last"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/language_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/genres"
            android:id="@+id/genres"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/languageValue_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="Action"
            android:id="@+id/genresValue_last"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/genres"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/productionCompanies"
            android:id="@+id/productionCompanies_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/genresValue_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="UK"
            android:id="@+id/productionCompaniesValue_last"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/productionCompanies_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/productionCountries"
            android:id="@+id/productionCountries_last"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/productionCompaniesValue_last"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="UK"
            android:id="@+id/productionCountriesValue_last"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path_last"
            app:layout_constraintTop_toBottomOf="@id/productionCountries_last"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>