<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_jungle_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/backdrop_path"
            android:minHeight="260dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"
            android:layout_marginBottom="50dp"
            tools:src="@drawable/ic_launcher_background"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="260dp"
            android:id="@+id/poster_path"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/overview"
            android:scaleType="fitXY"
            tools:src="@drawable/ic_launcher_background"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:minLines="3"
            android:textStyle="bold"
            android:id="@+id/movie_name"
            app:layout_constraintStart_toEndOf="@id/poster_path"
            app:layout_constraintTop_toTopOf="@id/poster_path"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="movie Name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/overview"
            android:id="@+id/overview"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="12dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/backdrop_path"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="overview Details"
            android:minLines="5"
            android:id="@+id/overview_detail"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/tagLine"
            android:id="@+id/tagLine"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/overview_detail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="tagLine Details"
            android:text="@string/na_string"
            android:id="@+id/tagLineDetails"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/tagLine"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/status"
            android:id="@+id/status"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/tagLineDetails"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="status"
            android:id="@+id/statusDetails"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/status"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/releaseDate"
            android:id="@+id/releaseDate"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/statusDetails"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="release date"
            android:id="@+id/releaseDateDetails"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/releaseDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/voteAverage"
            android:id="@+id/vote_average"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/releaseDateDetails"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="7.1"
            android:id="@+id/vote_average_detail"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/vote_average"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/budget"
            android:id="@+id/budget"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/vote_average_detail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="2,4564565"
            android:id="@+id/budgetValue"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/budget"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/language"
            android:id="@+id/language"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/budgetValue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="EN"
            android:id="@+id/languageValue"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/language"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/genres"
            android:id="@+id/genres"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/languageValue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="Action"
            android:id="@+id/genresValue"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/genres"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/productionCompanies"
            android:id="@+id/productionCompanies"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/genresValue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="UK"
            android:id="@+id/productionCompaniesValue"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/productionCompanies"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/productionCountries"
            android:id="@+id/productionCountries"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/productionCompaniesValue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="UK"
            android:id="@+id/productionCountriesValue"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/productionCountries"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>