<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:src="?attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/baltic_sea"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="140dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:lines="1"
            android:layout_marginStart="10dp"
            android:textColor="@color/platinum"
            android:textStyle="bold"
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/movie_name"
            android:ellipsize="end"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/popularity"
            android:textColor="@color/dark_orange"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_name">

        </TextView>

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/releaseDate"
            android:textColor="@color/dark_orange"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/popularity">

        </TextView>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
